--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/stock/directive/add/stock-add.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/stock/directive/add/stock-add.directive.html
@@ -1,1 +1,35 @@
 ﻿
+
+<div ng-show="!add.paramsAddSaveList">
+    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+        <label>نام/شناسه</label>
+        <input class="form-control" ng-change="add.searchChange()" ng-model="add.search" />
+    </div>
+    <div class="col-xs-12 " ng-repeat="item in add.list" style="cursor: pointer; margin-top: 5px;" ng-click="add.paramsAddSaveList = item">
+        نام : {{item.Name}}, شناسه : {{item.ID}}
+    </div>
+</div>
+
+<div ng-show="add.paramsAddSaveList">
+    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+        <label>تعداد</label>
+        <input class="form-control" ng-change="add.searchChange()" ng-model="add.paramsAddSaveList.Count" />
+    </div>
+    <div class="col-xs-12 ">
+        نام : {{add.paramsAddSaveList.Name}}, شناسه : {{add.paramsAddSaveList.ID}}
+    </div>
+    <div class="col-xs-12">
+        <button ng-click="add.addSaveList()" type="button" class="btn btn-info btn-min-width">افزودن</button>
+    </div>
+</div>
+
+<div class="col-xs-12 "><hr /></div>
+<div class="col-xs-12 " ng-repeat="item in add.saveList" style=" margin-top: 7px;">
+    نام : {{item.Name}}, شناسه : {{item.ID}}, تعداد : {{item.Count}}
+</div>
+<div class="col-xs-12 "><hr /></div>
+
+<div class="col-xs-12 btn-container">
+    <button ng-show="add.saveList.length && add.saveList.length > 0" ng-click="add.save()" class="btn btn-success btn-min-width">ثبت</button>
+    <button ng-click="main.changeState.cartable()" type="button" class="btn btn-cancel btn-min-width">بازگشت</button>
+</div>
