--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/stock/directive/modify/stock-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/stock/directive/modify/stock-modify.directive.html
@@ -1,19 +1,19 @@
 ﻿
-<div class="col-xs-12" ng-show="!add.showAdd">
-    <button ng-click="add.showAdd = true" type="button" class="btn btn-info btn-min-width">افزودن</button>
+<div class="col-xs-12" ng-show="!modify.add.showAdd">
+    <button ng-click="modify.add.showAdd = true" type="button" class="btn btn-info btn-min-width">افزودن</button>
 </div>
-<div class="col-xs-12 " ng-show="add.showAdd">
+<div class="col-xs-12 " ng-show="modify.add.showAdd">
 
 
     <div class="form-group col-xs-12 col-sm-6 col-md-3">
         <label>تعداد</label>
-        <input class="form-control" kama-prevent="letter" ng-model="add.model.Count" />
+        <input class="form-control" kama-prevent="letter" ng-model="modify.add.model.Count" />
     </div>
 
     <div class="col-xs-12 "><hr /></div>
     <div class="col-xs-12 btn-container">
-        <button ng-click="add.save()" class="btn btn-success btn-min-width">ثبت</button>
-        <button ng-click="add.showAdd = false" type="button" class="btn btn-cancel btn-min-width">انصراف</button>
+        <button ng-click="modify.save()" class="btn btn-success btn-min-width">ثبت</button>
+        <button ng-click="modify.add.showAdd = false" type="button" class="btn btn-cancel btn-min-width">انصراف</button>
     </div>
 </div>
 
