--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/modify/product-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/modify/product-modify.directive.html
@@ -8,6 +8,10 @@
     <label class="required">والد</label>
     <kama-select obj="modify.parentProductDropdown"></kama-select>
 </div>
+<div class="form-group col-xs-12 col-sm-6 col-md-3">
+    <label class="required">واحد اندازه کیری</label>
+    <kama-select obj="modify.unitOfMeasureTypeDropDown"></kama-select>
+</div>
 
 <div class="form-group col-xs-12"></div>
 <div class="form-group col-xs-12 col-sm-6 col-md-3">
