--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/modify/product-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/modify/product-modify.directive.html
@@ -1,16 +1,47 @@
-﻿
+﻿<div ng-show="modify.model.ID">
+    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+        <label>والد</label>
+        <input class="form-control" ng-model="modify.model.ClassificationName" disabled />
+    </div>
+    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+        <label>برند</label>
+        <input class="form-control" ng-model="modify.model.BrandName" disabled />
+    </div>
+    <div class="form-group col-xs-12"></div>
+</div>
+
+<div ng-show="!modify.model.ID">
+    <div class="form-group col-xs-12"></div>
+
+    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+        <label>فیلتر دسته بندی</label>
+        <kama-select obj="modify.filterParentProductDropdown" style="display:block"></kama-select>
+    </div>
+    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+        <label class="required">والد</label>
+        <kama-select obj="modify.parentProductDropdown" style="display:block"></kama-select>
+    </div>
+    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+        <label class="required">برند</label>
+        <kama-select obj="modify.berandDropdown" style="display:block"></kama-select>
+    </div>
+
+    <div class="form-group col-xs-12"></div>
+</div>
+
 <div class="form-group col-xs-12 col-sm-6 col-md-3">
     <label class="required">نام</label>
     <input class="form-control" ng-model="modify.model.Name" />
 </div>
 
 <div class="form-group col-xs-12 col-sm-6 col-md-3">
-    <label class="required">والد</label>
-    <kama-select obj="modify.parentProductDropdown"></kama-select>
-</div>
-<div class="form-group col-xs-12 col-sm-6 col-md-3">
     <label class="required">واحد اندازه گیری</label>
     <kama-select obj="modify.unitOfMeasureTypeDropDown"></kama-select>
+</div>
+
+<div class="form-group col-xs-12 col-sm-6 col-md-3">
+    <label>حداقل موجودی برای هشدار</label>
+    <input class="form-control" kama-prevent="letter" ng-model="modify.model.MinimumToAlert" />
 </div>
 
 <div class="form-group col-xs-12"></div>
