--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/modify/brand-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/modify/brand-modify.directive.html
@@ -8,9 +8,12 @@
     <input class="form-control" ng-model="modify.model.Name" />
 </div>
 
-<div class="col-xs-12 "><hr /></div>
+<div class="form-group col-xs-12">
+    <img-attachment obj="modify.img"></img-attachment>
+</div>
 <!--button-->
 
+<div class="col-xs-12 "><hr /></div>
 <div class="col-xs-12 btn-container">
     <button ng-click="modify.save()" class="btn btn-success btn-min-width">ثبت</button>
     <button ng-click="main.changeState.cartable()" type="button" class="btn btn-cancel btn-min-width">بازگشت</button>
