--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/index/index.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/index/index.html
@@ -7,8 +7,8 @@
         <div class="panel panel-kama">
             <div class="panel-heading">اطلاعیه‌ها و اخبار</div>
             <div class="panel-body">
-                <kama-announcement announcements="index.main.announcements"
-                                   loading="index.main.loadingAnnouncements"></kama-announcement>
+                <!--<kama-announcement announcements="index.main.announcements"
+                                   loading="index.main.loadingAnnouncements"></kama-announcement>-->
             </div>
         </div>
     </div>
