--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/cartable/brand-cartable.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/cartable/brand-cartable.directive.html
@@ -14,12 +14,12 @@
             <div class="panel-body">
                 <form>
                     <div class="form-group col-xs-12 col-sm-6 col-md-3">
-                        <label>والد</label>
-                        <kama-select obj="search.parentBrandDropdown"></kama-select>
+                        <label>نام</label>
+                        <input class="form-control" ng-model="search.model.FaName" />
                     </div>
                     <div class="form-group col-xs-12 col-sm-6 col-md-3">
-                        <label>نام</label>
-                        <input class="form-control" ng-model="search.model.Name" />
+                        <label>نام انگلیسی</label>
+                        <input class="form-control" ng-model="search.model.EnName" />
                     </div>
                     <div class="btn-container col-xs-12">
                         <hr />
