--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/modify/brand-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/modify/brand-modify.directive.html
@@ -5,7 +5,11 @@
 </div>
 <div class="form-group col-xs-12 col-sm-6 col-md-3">
     <label class="required">نام</label>
-    <input class="form-control" ng-model="modify.model.Name" />
+    <input class="form-control" ng-model="modify.model.FaName" />
+</div>
+<div class="form-group col-xs-12 col-sm-6 col-md-3">
+    <label class="required">نام انگلیسی</label>
+    <input class="form-control" ng-model="modify.model.EnName" />
 </div>
 
 <div class="form-group col-xs-12">
