--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/modify/brand-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/pbl/brand/directive/modify/brand-modify.directive.html
@@ -1,9 +1,4 @@
-﻿
-<div class="form-group col-xs-12 col-sm-6 col-md-3" ng-show="main.state === 'add'">
-    <label>والد</label>
-    <kama-select obj="modify.parentBrandDropdown"></kama-select>
-</div>
-<div class="form-group col-xs-12 col-sm-6 col-md-3">
+﻿<div class="form-group col-xs-12 col-sm-6 col-md-3">
     <label class="required">نام</label>
     <input class="form-control" ng-model="modify.model.FaName" />
 </div>
