--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/cartable/product-cartable.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/cartable/product-cartable.directive.html
@@ -27,23 +27,19 @@
                 <form ng-submit="cartable.grid.pageIndex = 1; cartable.grid.getlist();">
                     <div class="form-group col-xs-12 col-sm-6 col-md-3">
                         <label>نام</label>
-                        <input class="form-control" ng-model="search.model.Name" />
+                        <input class="form-control" ng-model="search.model.FaName" />
                     </div>
                     <div class="form-group col-xs-12 col-sm-6 col-md-3">
-                        <label>توضیح</label>
-                        <input class="form-control" ng-model="search.model.Comment" />
+                        <label>نام انگلیسی</label>
+                        <input class="form-control" ng-model="search.model.EnName" />
                     </div>
                     <div class="form-group col-xs-12 col-sm-6 col-md-3">
-                        <label>والد</label>
-                        <kama-select obj="search.parentProductDropdown"></kama-select>
+                        <label>دسته</label>
+                        <kama-select obj="search.classificationDropdown"></kama-select>
                     </div>
-                    <div class="form-group col-xs-12">
-                        <label>کمترین قیمت - {{search.model.StartPrice}}</label>
-                        <input type="range" ng-model="search.model.StartPrice" value="{{search.model.EndPrice}}" class="form-range" name="points" min="0" max="1000000">
-                    </div>
-                    <div class="form-group col-xs-12">
-                        <label>بیشترین قیمت - {{search.model.EndPrice}}</label>
-                        <input type="range" ng-model="search.model.EndPrice" value="{{search.model.EndPrice}}" class="form-range" name="points" min="0" max="1000000">
+                    <div class="form-group col-xs-12 col-sm-6 col-md-3">
+                        <label>برند</label>
+                        <kama-select obj="search.brandDropdown"></kama-select>
                     </div>
 
                     <!--button-->
