--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/information/product-information.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/directive/information/product-information.directive.html
@@ -1,24 +1,18 @@
 ﻿
 
 
-<div class="row" ng-show="modify.tabNumber == 3">
+<div class="row" ng-show="modify.tabNumber == 3 && modify.Informations && modify.Informations.length && modify.Informations.length > 0">
     <div class="col-xs-12">
         <div class="panel panel-default">
             <div class="panel-body">
-           
-                <div class="col-xs-12">
+                <div class="col-xs-12"
+                     ng-repeat="item in modify.Informations">
                     <div class="form-group col-xs-12 col-sm-6 col-md-3">
-                        <label class="required">تست 1</label>
-                        <input class="form-control" ng-model="modify.Information.Name" />
+                        <label class="required">{{item.Text}}</label>
+                        <input class="form-control" ng-model="item.Value" />
                     </div>
                 </div>
-                <div class="col-xs-12">
-                    <div class="form-group col-xs-12 col-sm-6 col-md-3">
-                        <label class="required">تست 2</label>
-                        <input class="form-control" ng-model="modify.Information.LastName" />
-                    </div>
-                </div>
-            
+
             </div>
         </div>
     </div>
