--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/product.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/product/product.html
@@ -2,9 +2,9 @@
     <div class="col-xs-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <span ng-show="product.main.state === 'add'">ایجاد جنس</span>
-                <span ng-show="product.main.state === 'edit'">ویرایش جنس</span>
-                <span ng-show="product.main.state === 'cartable'">‌جنس‌ها</span>
+                <span ng-show="product.main.state === 'add'">ایجاد محصول</span>
+                <span ng-show="product.main.state === 'edit'">ویرایش محصول</span>
+                <span ng-show="product.main.state === 'cartable'">‌محصول‌ها</span>
             </div>
             <div class="panel-body">
                 <kama-product-cartable main="product.main"
