--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/item/directive/modify/item-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/item/directive/modify/item-modify.directive.html
@@ -68,11 +68,11 @@
         <button ng-click="modify.addImg()" class="btn btn-info btn-min-width">اقزودن تصویر</button>
     </div>
 
-    <kama-product-tag main="main"
+    <kama-item-tag main="main"
                       modify="modify"
-                      tag="tag"></kama-product-tag>
-    <kama-product-information main="main"
-                              modify="modify"></kama-product-information>
+                      tag="tag"></kama-item-tag>
+    <kama-item-information main="main"
+                              modify="modify"></kama-item-information>
 </div>
 <div class="col-xs-12 "><hr /></div>
 <!--button-->
