--- a/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/item/directive/modify/item-modify.directive.html
+++ b/Kama.Bonyad.Evaluation.WebApp/app/pages/prd/item/directive/modify/item-modify.directive.html
@@ -65,7 +65,7 @@
         <div class="col-xs-12" ng-repeat="item in modify.imgs">
             <img-attachment  class="col-xs-12" obj="item"></img-attachment>
         </div>
-        <button ng-click="modify.addImg()" class="btn btn-info btn-min-width">اقزودن تصویر</button>
+        <button ng-click="modify.addImg()" class="btn btn-info btn-min-width">افزودن تصویر</button>
     </div>
 
     <kama-item-tag main="main"
